# fork-PURR-OS-ESP32

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE_NOTES.md  LINUX_BUILD.md  PURR OS Layout.md  PURR_OS_0.13.0.md  PURR_OS_1.0_CHECKLIST.md  PURR_TODO.md  README.md  TODO.md  build_out2.txt  docs.md  emulate  emulator.py  export.md  meshplan.md  pounce_plan.md  purr.ps1  purr.py  purr.sh  purrstrap.py  run.py  sdk.py  setup_esp_idf.sh  setup_linux.sh
CoreOS/: CMakeLists.txt  idf_component.yml  partitions_16mb.csv  partitions_4mb.csv  partitions_8mb.csv  partitions_cyd.csv  partitions_heltec.csv  partitions_jc3248w535.csv  partitions_tdeck_plus.csv  partitions_waveshare169.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig_cyd  sdkconfig_cyd_boot  sdkconfig_cyd_s024c  sdkconfig_cyd_s028r  sdkconfig_heltec  sdkconfig_jc3248w535  sdkconfig_tab5  sdkconfig_tab5.overrides  sdkconfig_tdeck  sdkconfig_tdeck.overrides  sdkconfig_tdeck_plus  sdkconfig_tdeck_plus.overrides  sdkconfig_tdeck_plus_arduino  sdkconfig_tdeck_plus_arduino.overrides  sdkconfig_tdeck_plus_pounce  sdkconfig_tdeck_plus_test  sdkconfig_tdeck_plus_test.overrides  sdkconfig_waveshare169
CoreOS/apps/kitten_ui/: kitten_ui.cpp  kitten_ui.h
CoreOS/apps/launcher/: launcher.cpp  launcher.h
CoreOS/apps/smol/: smol.cpp  smol.h
CoreOS/boot/emergency/: main.cpp
CoreOS/boot/watchdog/: main.cpp
CoreOS/components/drv_bt/: CMakeLists.txt  bt_manager.cpp
CoreOS/components/drv_cc1101/: CMakeLists.txt  cc1101_manager.cpp  cc1101_manager.h
CoreOS/components/drv_display/: CMakeLists.txt  display_ili9341.cpp  display_ili9341.h  display_ili9488.cpp  display_ssd1306.cpp  display_st7789.cpp  display_st7789.h  display_st7796.cpp  display_st7796.h
CoreOS/components/drv_gps/: CMakeLists.txt  gps_manager.cpp  gps_manager.h
CoreOS/components/drv_hid/: CMakeLists.txt  hid_main.cpp  keyboard_matrix.cpp  keyboard_matrix.h  usb_hid.cpp
CoreOS/components/drv_lora/: CMakeLists.txt  lora_manager.cpp
CoreOS/components/drv_lte/: CMakeLists.txt
CoreOS/components/drv_shell/: CMakeLists.txt  drv_shell.c  drv_shell.h  shell_cmds_display.cpp  shell_cmds_miniwin.cpp  shell_cmds_sys.c
CoreOS/components/drv_touch/: CMakeLists.txt  touch_cst816s.cpp  touch_gt911.cpp  touch_gt911.h  touch_mxt336t.cpp  touch_mxt336t.h  touch_xpt2046.cpp  touch_xpt2046.h
CoreOS/components/drv_wifi/: CMakeLists.txt  wifi_manager.cpp  wifi_manager.h  wifi_manager_stub.cpp
CoreOS/components/lib_arduino/: CMakeLists.txt
CoreOS/components/lib_lua/: CMakeLists.txt  setup.ps1
CoreOS/components/lib_lua/src/: luaconf.h
CoreOS/components/lib_mesh_pb/: CMakeLists.txt
CoreOS/components/lib_miniwin/: CMakeLists.txt
CoreOS/components/lib_nanopb/: CMakeLists.txt
CoreOS/components/lib_radiolib/: CMakeLists.txt
CoreOS/components/lua/: README.md  setup.sh
CoreOS/components/lua/src/: lua.hpp
CoreOS/components/miniwinwm/: CMakeLists.txt
CoreOS/components/radiolib/: CMakeLists.txt
CoreOS/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  purr_modules.ld
CoreOS/system/: Arduino.h  Print.h  SPI.h  String.h
CoreOS/system/bridge/: main.cpp
CoreOS/system/bridge/keymaps/: cattopad_4x5.json  heltec.json
CoreOS/system/kernel/: device_config.cpp  device_config.h  kitt.cpp  kitt.h  main.cpp  purr_idf_compat.h  purr_panic.cpp  purr_panic.h  purr_version.h
CoreOS/system/kernel/devices/: cyd.json  tdeck_plus.json  tembed_cc1101.json  waveshare169.json
CoreOS/system/kernel/modules/: blackberry_ui.cpp  blackberry_ui.h  bt_manager.cpp  bt_manager.h  display_ili9341.cpp  display_ili9341.h  display_ili9488.cpp  display_ssd1306.cpp  display_ssd1306.h  display_st7789.cpp  display_st7789.h  display_st7796.cpp  explorer.cpp  explorer.h  flasher.cpp  lua_runtime.h  (+29 more)
CoreOS/system/micropython/: kitt_module.c  mpconfigport.h  mpython_runtime.cpp
CoreOS/system/system/: main.cpp
PURR-OS-0.11/CattoHID/: CMakeLists.txt
PURR-OS-0.11/drivers/drv_cc1101/: CMakeLists.txt  cc1101_manager.cpp  cc1101_manager.h
PURR-OS-0.11/drivers/drv_display_axs15231b/: CMakeLists.txt  display_axs15231b.cpp  display_axs15231b.h
PURR-OS-0.11/drivers/drv_touch/: CMakeLists.txt  touch_cst816s.h  touch_gt911.cpp
archive/sim/: CMakeLists.txt  app.h  build.ps1  gen_sim_shell.py  hal_lcd_sim.c  kitt_sim.cpp  main.c  main_sim.cpp
archive/sim/compat/: SPIFFS_sim.h  Wire_sim.h  display_sim.h  kitt_sim.h  purr_version_sim.h  sim_preamble.h  touch_sim.h
drivers/drv_display/: CMakeLists.txt  display_ili9341.cpp  display_ili9488.h  display_ssd1306.h  display_st7789.h  display_st7796.h
drivers/drv_hid/: CMakeLists.txt  keyboard_matrix.cpp  usb_hid.cpp
drivers/drv_shell/: CMakeLists.txt  drv_shell.c  drv_shell.h  shell_cmds_conman.cpp  shell_cmds_drv.cpp  shell_cmds_gpio.c  shell_cmds_miniwin.cpp  shell_cmds_script.cpp  shell_cmds_sys.c
drivers/drv_wifi/: CMakeLists.txt  wifi_manager.cpp  wifi_manager.h  wifi_manager_stub.cpp
sim/: CMakeLists.txt  build.ps1  miniwin_config.h  mw_user.c
sim/build_blackberry/: CMakeCache.txt
sim/compat/: Arduino_sim.h  Preferences_sim.h  blackberry_ui.h  partition_sim.h
sim/compat/freertos/: task_sim.h
source/modules/app_manager_remote/: CMakeLists.txt  app_manager_remote.c  app_manager_remote.h  module.pcat
source/modules/blackpurr/: CMakeLists.txt  blackpurr.h  blackpurr_module.c  blackpurr_shell.c  module.pcat
source/modules/homebase/: CMakeLists.txt  homebase.c  homebase.h  module.pcat
source/modules/lua_runtime/: CMakeLists.txt  lua_runtime.c  lua_runtime.h  module.pcat
source/modules/meshcore/: CMakeLists.txt  mc_contacts.cpp  mc_contacts.h  mc_identity.cpp  mc_identity.h  mc_packet_pool.cpp  mc_packet_pool.h  mc_radio_adapter.cpp  mc_radio_adapter.h  meshcore_api.h  meshcore_module.cpp  module.pcat
source/modules/meshtastic/: CMakeLists.txt  mesh_ble.c  mesh_ble.h  mesh_radio.c  mesh_radio.h  mesh_router.c  mesh_router.h  meshtastic.h  meshtastic_module.c  module.pcat
ui/lib_miniwin/: CMakeLists.txt
ui/lib_miniwin/MiniWin/: miniwin_debug.h
ui/purr_wm/: CMakeLists.txt  minwin_hal_adapter.cpp  purr_wm.cpp
(+1326 files in other folders)
